--- a/index.html
+++ b/index.html
@@ -67,30 +67,27 @@ WRITE HERE WHAT I NEED - PLAN AHEAD!
 <main class="jumbotron">
   <h1 class="display-3">Work Day Scheduler</h1>
   <p class="lead"><strong>A simple calendar app for scheduling your work day</p>
-  <h4> The Date is:</h4>
+  <h2> The Date is:</h2>
   <p id="currentDay" class="lead"></p>
 
   <p class="lead">The current time is:<p id="currentTime"></p>
 
   <section>
-
     
   </section>
   
 </main>
 
 
-
-
-
 <!-- Timeblocks go here -->
 <div class="container">
   <div class="row">
     <textarea class="col-8"></textarea>
+<!-- <h2 ="localStorage.getItem('notes');"></h2> -->
+    <input type="text">
+  <h2 input="value"></h2>
+
     <button>add</button>
-
-    
-
 
 
   </div>
