--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ The app should:
 
 * Display the current day at the top of the calender when a user opens the planner. DONE!
 
-* Present timeblocks for standard business hours when the user scrolls down.
+* Present timeblocks for standard business hours when the user scrolls down. 9am - 5pm ONLY!
  
 * Color-code each timeblock based on past, present, and future when the timeblock is viewed.
 
@@ -84,10 +84,11 @@ WRITE HERE WHAT I NEED - PLAN AHEAD!
   <div class="row">
     <textarea class="col-8"></textarea>
 <!-- <h2 ="localStorage.getItem('notes');"></h2> -->
-    <input type="text">
-  <h2 input="value"></h2>
+    <!-- <input type="text"> -->
+  <!-- <h2 input="value"></h2> -->
 
-    <button>add</button>
+    <button>Save to 9am</button>
+
 
 
   </div>
