added icon button

--- a/index.html
+++ b/index.html
@@ -82,12 +82,18 @@ WRITE HERE WHAT I NEED - PLAN AHEAD!
 <!-- Timeblocks go here -->
 <div class="container">
   <div class="row">
-    <textarea class="col-8"></textarea>
+    <textarea class="col-8" data-time="10am"></textarea>
+    <button data-time="9am"><i class="far fa-save"></i></button>
+    <!-- above just got the button from Awesome Fonts for Free. <i class="far fa-save"></i>  -->
+    
 <!-- <h2 ="localStorage.getItem('notes');"></h2> -->
     <!-- <input type="text"> -->
   <!-- <h2 input="value"></h2> -->
 
-    <button>Save to 9am</button>
+
+
+
+    <!-- <button>Save to 9am</button> -->
 
 
 
