--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@ WRITE HERE WHAT I NEED - PLAN AHEAD!
     <!-- just added this js -->
     <!-- <script scr="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
-
+    
+    <!--Button functionality.-->
     <script>
       $("button").on("click", function(event){
 
-        console.log($(event.target))
+        console.log($(event.target).siblings("textarea").val())
 
 
       })
@@ -153,7 +154,7 @@ WRITE HERE WHAT I NEED - PLAN AHEAD!
 
     <script src="./script.js"></script>
 
-
+<!--Note: any sort of input I'm working with, I want the Value .val() not the text -->
 
 
   </body>
